fix alignment

--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 /* Navbar styles */
 .navbar {
   background-color: rgb(98, 91, 234);
@@ -95,11 +96,11 @@ footer {
 
 body {
   font-family: Arial, sans-serif;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  display: flex;
-  background-color: #f4f4f4;
+  line-height: 1.6;
+  background-color: rgb(243, 245, 247);
+  margin: 0;
+  padding: 0;
+  display: block; 
 }
 
 .container {
